<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.c om/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.biro.footballsocer.DetailActivity">


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/clubImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/teamimage"

                android:scaleType="centerCrop"
                android:transitionName="@string/imagetransition"
                tools:targetApi="lollipop" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/clubImage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"

                        android:layout_marginTop="8dp"
                        android:text="@string/name"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"

                        android:text="@string/country"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"

                        android:text="@string/stadium"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"

                        android:layout_marginTop="8dp"
                        android:text="@string/league"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"

                        android:text="@string/matches"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"

                        android:text="@string/wins"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"

                        android:text="@string/loses"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"

                        android:text="@string/draws"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"

                        android:text="@string/pos"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"

                        android:layout_marginTop="8dp"
                        android:text="@string/points"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"


                        android:text="@string/goals"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"

                        android:layout_marginTop="8dp"
                        android:text="@string/goalsagainst"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/clubName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="Barcalona"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/clubCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="England"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/clubStadium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="old trafod"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />


                    <TextView
                        android:id="@+id/clubLeague"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="premier league"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />


                    <TextView
                        android:id="@+id/clubMatches"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="10"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/clubWins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="10"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/clubLoses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="10"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/clubDraws"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="10"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />


                    <TextView
                        android:id="@+id/clubPosition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="1"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/clubPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="10"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/clubGoals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="10"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/clubGoalsAg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="10"
                        android:textColor="@color/md_white_1000"

                        android:textSize="20sp" />


                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>


    </ScrollView>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/admob"
        ads:adSize="320x50"
        ads:adUnitId="@string/ad_mob_banner" />
</RelativeLayout>

